# business-rader-3000

./: .gitignore  README.md  pyproject.toml
exports/: ford_motor_company-20250917-063737.csv  ford_motor_company-20250917-063737.json  ford_motor_company-20250918-071655.csv  ford_motor_company-20250918-071655.json  ford_motor_company-20250919-070527.json  ford_motor_company-20250919-071636.csv  ford_motor_company-20250923-065437.csv  ford_motor_company-20250923-065437.json  ford_motor_company_market_map.gexf  ford_motor_company_market_map.html  ford_motor_company_swot-20250921-111340.json  ford_motor_company_swot-20250923-064706.json  tesla,_inc.-20250917-063900.csv  tesla,_inc.-20250917-063900.json  zeon_corporation-20250917-064114.csv  zeon_corporation-20250917-064114.json
src/: cli.py  main.py
src/services/: contacts.py  enrichment.py  exporter.py  keyword_match.py  market_graph.py  news.py  similar.py  swot.py
